--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
                 <div class="faq-answer">
                     <p>Circles is a platform designed to...</p>
                 </div>
+           <div class="faq-item">
+               <button class="faq-question">If you delete a coordinator, will you delete the young person's data?</button>
+               <div class="faq-answer">
+                    <p>No the young person's information will return to the administrator so that it can be assigned to a different coordinator or social worker.</p>
+           </div>
+        </div>
+
             </div>
             <!-- End of FAQ block -->
             <!-- Add up to 60 such blocks -->
