--- a/index.html
+++ b/index.html
@@ -13,24 +13,29 @@
     </header>
     <main>
         <div class="faq-container">
-            <!-- Repeat this block for each FAQ -->
+            <!-- FAQ 1 -->
             <div class="faq-item">
                 <button class="faq-question">What is Circles?</button>
                 <div class="faq-answer">
                     <p>Circles is a platform designed to...</p>
                 </div>
-           <div class="faq-item">
-               <button class="faq-question">If you delete a coordinator, will you delete the young person's data?</button>
-               <div class="faq-answer">
-                    <p>No the young person's information will return to the administrator so that it can be assigned to a different coordinator or social worker.</p>
-           </div>
-        </div>
-
             </div>
-            <!-- End of FAQ block -->
-            <!-- Add up to 60 such blocks -->
+
+            <!-- FAQ 2 -->
+            <div class="faq-item">
+                <button class="faq-question">If you delete a coordinator, will you delete the young person's data?</button>
+                <div class="faq-answer">
+                    <p>No, the young person's information will return to the administrator so that it can be assigned to a different coordinator or social worker.</p>
+                </div>
+            </div>
+
+            <!-- Repeat more faq-item blocks here... -->
         </div>
     </main>
+
+    <!-- This button gets created by script.js but you can add it here too -->
+    <!-- <button id="backToTopBtn">↑</button> -->
+
     <script src="script.js"></script>
 </body>
 </html>
