--- a/index.html
+++ b/index.html
@@ -15,26 +15,79 @@
         <div class="faq-container">
             <!-- FAQ 1 -->
             <div class="faq-item">
-                <button class="faq-question">What is Circles?</button>
-                <div class="faq-answer">
+                <button class="faq-question" aria-expanded="false" aria-controls="faq1">What is Circles?</button>
+                <div class="faq-answer" id="faq1" role="region" aria-hidden="true">
                     <p>Circles is a platform designed to...</p>
                 </div>
             </div>
 
             <!-- FAQ 2 -->
             <div class="faq-item">
-                <button class="faq-question">If you delete a coordinator, will you delete the young person's data?</button>
-                <div class="faq-answer">
+                <button class="faq-question" aria-expanded="false" aria-controls="faq2">If you delete a coordinator, will you delete the young person's data?</button>
+                <div class="faq-answer" id="faq2" role="region" aria-hidden="true">
                     <p>No, the young person's information will return to the administrator so that it can be assigned to a different coordinator or social worker.</p>
                 </div>
             </div>
 
-            <!-- Repeat more faq-item blocks here... -->
+            <!-- FAQ 3 -->
+            <div class="faq-item">
+               <button class="faq-question" aria-expanded="false" aria-controls="faq3">Your Question?</button>
+               <div class="faq-answer" id="faq3" role="region" aria-hidden="true">
+                 <p>Your answer goes here...</p>
+               </div>
+            </div>
+            
+            <div class="faq-item">
+              <button class="faq-question" aria-expanded="false" aria-controls="faq1">Question 1?</button>
+              <div class="faq-answer" id="faq1" role="region" aria-hidden="true">
+                <p>Answer to question 1 goes here...</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" aria-expanded="false" aria-controls="faq2">Question 2?</button>
+            <div class="faq-answer" id="faq2" role="region" aria-hidden="true">
+                <p>Answer to question 2 goes here...</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" aria-expanded="false" aria-controls="faq3">Question 3?</button>
+            <div class="faq-answer" id="faq3" role="region" aria-hidden="true">
+                <p>Answer to question 3 goes here...</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" aria-expanded="false" aria-controls="faq4">Question 4?</button>
+            <div class="faq-answer" id="faq4" role="region" aria-hidden="true">
+                <p>Answer to question 4 goes here...</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" aria-expanded="false" aria-controls="faq5">Question 5?</button>
+            <div class="faq-answer" id="faq5" role="region" aria-hidden="true">
+                <p>Answer to question 5 goes here...</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" aria-expanded="false" aria-controls="faq6">Question 6?</button>
+            <div class="faq-answer" id="faq6" role="region" aria-hidden="true">
+                <p>Answer to question 6 goes here...</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" aria-expanded="false" aria-controls="faq7">Question 7?</button>
+            <div class="faq-answer" id="faq7" role="region" aria-hidden="true">
+                <p>Answer to question 7 goes here...</p>
+            </div>
+        </div>
+
         </div>
     </main>
-
-    <!-- This button gets created by script.js but you can add it here too -->
-    <!-- <button id="backToTopBtn">↑</button> -->
 
     <script src="script.js"></script>
 </body>
