--- a/index.html
+++ b/index.html
@@ -36,56 +36,64 @@
                  <p>Your answer goes here...</p>
                </div>
             </div>
-            
+
+            <!-- FAQ 4 -->
             <div class="faq-item">
-              <button class="faq-question" aria-expanded="false" aria-controls="faq1">Question 1?</button>
-              <div class="faq-answer" id="faq1" role="region" aria-hidden="true">
+              <button class="faq-question" aria-expanded="false" aria-controls="faq4">Question 1?</button>
+              <div class="faq-answer" id="faq4" role="region" aria-hidden="true">
                 <p>Answer to question 1 goes here...</p>
+              </div>
             </div>
-        </div>
 
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false" aria-controls="faq2">Question 2?</button>
-            <div class="faq-answer" id="faq2" role="region" aria-hidden="true">
-                <p>Answer to question 2 goes here...</p>
+            <!-- FAQ 5 -->
+            <div class="faq-item">
+                <button class="faq-question" aria-expanded="false" aria-controls="faq5">Question 2?</button>
+                <div class="faq-answer" id="faq5" role="region" aria-hidden="true">
+                    <p>Answer to question 2 goes here...</p>
+                </div>
             </div>
-        </div>
 
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false" aria-controls="faq3">Question 3?</button>
-            <div class="faq-answer" id="faq3" role="region" aria-hidden="true">
-                <p>Answer to question 3 goes here...</p>
+            <!-- FAQ 6 -->
+            <div class="faq-item">
+                <button class="faq-question" aria-expanded="false" aria-controls="faq6">Question 3?</button>
+                <div class="faq-answer" id="faq6" role="region" aria-hidden="true">
+                    <p>Answer to question 3 goes here...</p>
+                </div>
             </div>
-        </div>
 
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false" aria-controls="faq4">Question 4?</button>
-            <div class="faq-answer" id="faq4" role="region" aria-hidden="true">
-                <p>Answer to question 4 goes here...</p>
+            <!-- FAQ 7 -->
+            <div class="faq-item">
+                <button class="faq-question" aria-expanded="false" aria-controls="faq7">Question 4?</button>
+                <div class="faq-answer" id="faq7" role="region" aria-hidden="true">
+                    <p>Answer to question 4 goes here...</p>
+                </div>
             </div>
-        </div>
 
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false" aria-controls="faq5">Question 5?</button>
-            <div class="faq-answer" id="faq5" role="region" aria-hidden="true">
-                <p>Answer to question 5 goes here...</p>
+            <!-- FAQ 8 -->
+            <div class="faq-item">
+                <button class="faq-question" aria-expanded="false" aria-controls="faq8">Question 5?</button>
+                <div class="faq-answer" id="faq8" role="region" aria-hidden="true">
+                    <p>Answer to question 5 goes here...</p>
+                </div>
             </div>
-        </div>
 
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false" aria-controls="faq6">Question 6?</button>
-            <div class="faq-answer" id="faq6" role="region" aria-hidden="true">
-                <p>Answer to question 6 goes here...</p>
+            <!-- FAQ 9 -->
+            <div class="faq-item">
+                <button class="faq-question" aria-expanded="false" aria-controls="faq9">Question 6?</button>
+                <div class="faq-answer" id="faq9" role="region" aria-hidden="true">
+                    <p>Answer to question 6 goes here...</p>
+                </div>
             </div>
-        </div>
 
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false" aria-controls="faq7">Question 7?</button>
-            <div class="faq-answer" id="faq7" role="region" aria-hidden="true">
-                <p>Answer to question 7 goes here...</p>
+            <!-- FAQ 10 -->
+            <div class="faq-item">
+                <button class="faq-question" aria-expanded="false" aria-controls="faq10">Question 7?</button>
+                <div class="faq-answer" id="faq10" role="region" aria-hidden="true">
+                    <p>Answer to question 7 goes here...</p>
+                </div>
             </div>
-        </div>
 
+            <!-- More FAQ blocks... -->
         </div>
     </main>
 
