--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
     </header>
     <main>
         <div class="faq-container">
-<div class="faq-item">
-    <button class="faq-question" aria-expanded="false" aria-controls="faq1">What is Circles?</button>
-    <div class="faq-answer" id="faq1" role="region" aria-hidden="true">
-        <p>Circles is a platform designed to...</p>
-    </div>
-</div>
-
+            <!-- The FAQ items will be dynamically added by the JavaScript -->
         </div>
     </main>
 
