--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <img src="https://github.com/CirclesFRG/CirclesFAQ/blob/main/images/Family%20Rights%20Group%20Portrait%20Logo%20RGB.jpg?raw=true" alt="Family Rights Group Logo" id="logo">
-    <h1><p>Circles</p> <p>Frequently Asked Questions</p></h1>
+    <h1>Circles Frequently Asked Questions</h1>
     <input type="text" id="searchInput" onkeyup="searchFAQs()" placeholder="Search FAQs...">
 </header>
 
