--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
     
 <body>
-<header>
-    <img src="https://github.com/CirclesFRG/CirclesFAQ/blob/main/images/Family%20Rights%20Group%20Portrait%20Logo%20RGB.jpg?raw=true" alt="Family Rights Group Logo" id="logo">
-    <h1>Circles Frequently Asked Questions</h1>
-    <input type="text" id="searchInput" onkeyup="searchFAQs()" placeholder="Search FAQs...">
-</header>
+<section class="faq-intro">
+  <p>
+    Please find our frequently asked questions below. If you are unable to find the answer that you're looking for, please email: 
+    <a href="mailto:circles@frg.org.uk">circles@frg.org.uk</a>.
+  </p>
+</section>
 
     <main>
         <div class="faq-container">
