--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Circles - Frequently Asked Questions</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-    
+ <div class="search-bar">
+  <input type="text" id="searchInput" placeholder="Search FAQs..." />
+  <button id="searchButton">Search</button>
+</div>   
 <body>
 <section class="faq-intro">
   <p>
