--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="mailto:circles@frg.org.uk">circles@frg.org.uk</a>.
   </p>
 </section>
- <div class="search-bar">
+ <div class="search-wrapper">
   <input type="text" id="searchInput" placeholder="Search FAQs..." />
   <button id="searchButton">Search</button>
 </div> 
