--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </section>
  <div class="search-wrapper">
   <input type="text" id="searchInput" placeholder="Search FAQs..." />
-  <button id="searchButton">Search</button>
+  <button id="searchButton" onclick="searchFAQs()">Search</button>
+
 </div> 
     <main>
         <div class="faq-container">
