--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <section class="faq-intro">
   <p>
-    Please find our frequently asked questions below. If you are unable to find the answer that you're looking for, please email: 
+    Please find our frequently asked questions below. If you are unable to find the answer that you are looking for, please email: 
     <a href="mailto:circles@frg.org.uk">circles@frg.org.uk</a>.
   </p>
 </section>
