--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   
 <body>
 <section class="faq-intro">
-  <p>
-    Please find our frequently asked questions below. Use the search bar by (e.g.) typing in 'password' to show all of the relevant entries. If you are unable to find the answer that you are looking for, please email: 
-    <a href="mailto:circles@frg.org.uk">circles@frg.org.uk</a> or use the <a href= 'https://frg.org.uk/family-group-conferences/fgc-network-members-area/fgc-and-lifelong-links-network-discussion-forum' target='_blank'>Lifelong Links Forum.<a/>
-  </p>
+<p>
+    Please find our frequently asked questions below. Use the search bar by (e.g.) typing in 'password' to show all of the relevant entries.
+</p>
+<p>
+    If you are unable to find the answer that you are looking for, please email: 
+    <a href="mailto:circles@frg.org.uk">circles@frg.org.uk</a> or use the 
+    <a href="https://frg.org.uk/family-group-conferences/fgc-network-members-area/fgc-and-lifelong-links-network-discussion-forum" target="_blank">Lifelong Links Forum.</a>
+</p>
 </section>
  <div class="search-wrapper">
   <input type="text" id="searchInput" placeholder="Search FAQs..." />
